Add CUE splitter
